# opspilot

./: .gitignore  AGENT_ACCURACY_PLAN.md  AGENT_FAILURE_ANALYSIS.md  AGENT_LEARNING_PLAN.md  AI_DRIVEN_REFACTORING.md  ARCHITECTURE_IMPROVEMENT_REPORT.md  COMPLETE_AI_CONTEXT_FIX.md  IMPLEMENTATION_COMPLETE.md  LICENSE  LLAMA_OPTIMIZATION_GUIDE.md  Modelfile  Modelfile.brain  Modelfile.k8s-cli  NEXT_10X_IMPROVEMENTS.md  PLAN-autonomous-agent.md  PLAN-cluster-wide-chat.md  PLAN-support-bundle.md  PLAN.md  PLAN_HISTORICAL_DATA_UI.md  PRODUCTION_GRADE_PLAN.md  README.md  RELEASE_NOTES_v0.2.1.md  SELF_REFLECTION_IMPLEMENTATION.md  STREAMING_UI_DESIGN.md  STREAMING_UI_INTEGRATION.md  build_log.txt  build_log_retry.txt  debug_connection.py  debug_entry.py  eval_k8s_cli_2.txt  eval_llama.txt  eval_output.txt  eval_real_output.txt  eval_real_output_v3.txt  index.html  k8s_lens_better_full_spec.md  lens-killer-topology-spec copy.md  opspilot.key  opspilot.key.pub  package-lock.json  (+8 more)
.venv-build/: pyvenv.cfg  requirements.hash  source.hash
docs/: knowledge-base.md  presentation-design.md
knowledge/: advanced-tools-guide.json  autonomous-playbook.json  azure_resources_patterns.jsonl  castai-troubleshooting.json  certificate-tls-troubleshooting.json  cluster-api-troubleshooting.json  cncf_argocd_patterns.jsonl  common-issues.md  configmap-secret-troubleshooting.json  crashloop-troubleshooting.json  cronjob-job-troubleshooting.json  crossplane-azure-providers-troubleshooting.json  crossplane-troubleshooting.json  crossplane_advanced_patterns.jsonl  crossplane_azure_patterns.jsonl  dns-networking-troubleshooting.json  helm-troubleshooting.json  hpa-scaling-troubleshooting.json  image-pull-troubleshooting.json  investigation-patterns.json  istio-gateway-troubleshooting.json  k8s-master-kb.json  kb-index.json  kubectl-commands.json  namespace-stuck-terminating.json  oomkilled-troubleshooting.json  placeholder-errors.json  pod-security-troubleshooting.json  probe-troubleshooting.json  rbac-permissions-troubleshooting.json  rebuilt_kb.jsonl  resource-limits-troubleshooting.json  test.json  (+14 more)
src-tauri/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json
src-tauri/cache/: experiences.jsonl  kb_embeddings.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: kb_embeddings.json
src-tauri/resources/knowledge/: mcp-integration.json
src-tauri/src/: agent_sidecar.rs  ai_local.rs  client.rs  embeddings.rs  knowledge.rs  learning.rs  lib.rs  main.rs  models.rs  state.rs  utils.rs
src-tauri/src/commands/: ai_utilities.rs  argocd.rs  azure.rs  claude.rs  cluster.rs  context.rs  cost.rs  dependencies.rs  discovery.rs  helm.rs  networking.rs  resources.rs  support_bundle.rs  terminal.rs  vcluster.rs
src-tauri/src/mcp/: client.rs  commands.rs  core.rs  manager.rs  mod.rs
src-tauri/src/proxy/: argocd.rs
src-tauri/src/utils/: logging.rs  mod.rs
(+319 files in other folders)
