[package]
name = "opspilot"
version = "0.2.116"
description = "Fast Kubernetes IDE with autonomous AI debugging. Tauri + Rust + Ollama for read-only incident analysis."
authors = ["you"]
license = "BUSL-1.1"
edition = "2021"

[lib]
name = "opspilot"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
# The Kubernetes Stack
kube = { version = "0.96", features = ["runtime", "derive", "client", "ws", "config"] }
k8s-openapi = { version = "0.23", features = ["v1_30", "schemars"] }
futures = "0.3"
futures-util = "0.3"
portable-pty = "0.8"
chrono = { version = "0.4", features = ["serde", "clock"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
sysinfo = "0.30"
walkdir = "2.5.0"
urlencoding = "2"
uuid = { version = "1", features = ["v4"] }
regex = "1"
dirs = "5"
tauri-plugin-fs = "2.4.4"
tauri-plugin-http = "2.5.4"
tauri-plugin-opener = "2"
keyring = "3.6.3"
which = "6"
base64 = "0.22.1"
axum = "0.8.8"
tower = "0.5.2"
tower-http = { version = "0.6.8", features = ["cors", "trace"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[target.tauri-build.dependencies]
tauri-plugin-updater = "2.9.0"
